# src/main/java/cz/muni/ics/perunproxyapi/presentation/rest/controllers/StatisticsProtectedController.java
@@ -39,15 +39,15 @@ public class StatisticsProtectedController {
      *
      * EXAMPLE CURL:
      *  curl --request PUT \
-     *   --url http://localhost:8080/proxyapi/auth/relying-party/statistics \
+     *   --url http://localhost:8080/proxyapi/auth/statistics \
      *   --header 'Authorization: Basic auth' \
      *   --header 'Content-Type: application/json' \
      *   --data '{
      * 	    "login": "test_user_login",
      * 	    "rp-identifier": "test_rpIdentifier",
-     * 	    "rpName": "test_rpName",
-     * 	    "idpEntityId": "test_idpEntityId",
-     * 	    "idpName": "test_IdpName"
+     * 	    "rp-name": "test_rpName",
+     * 	    "idp-identifier": "test_idpEntityId",
+     * 	    "idp-name": "test_IdpName"
      *    }'
      * </pre>
      * @param body json body corresponding of required attributes:
